fixed button copy wrapping to two lines on multiple pages in patient 2 and 3

--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -1053,11 +1053,19 @@ main.patient-2.top-gray {
         }
       }
 }
-.col-md-4 {
+.col-md-4 ,.col-md-6{
   button {
     text-transform: uppercase;
     font-size:17px;
-        letter-spacing: 4px;
+    letter-spacing: 4px;
+        &.select {
+          position: relative;
+          top: 0px;
+          left: 10px;
+        }
+        &:hover {
+          color:white;
+        }
   }
   .continue {
     position: relative;
